refactor: Member와 관련된 Car 기능이 Car API로 이전